syntax = "proto3";

package runtiva.user.v1;

// Inputs are the request messages/objects that the client sends to the server as part of the service call requests.
message UserProfilesMinRequest {
    repeated int64 user_ids = 1;
}
